# vault

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md
examples/: README.md  api_keys_example.py  basic_usage.py  fastapi_app.py  webhooks_example.py
tests/: README.md  conftest.py  test_apikeys.py  test_audit.py  test_auth.py  test_client.py  test_config.py  test_invitations.py  test_organizations.py  test_rbac.py  test_utils.py  test_webhooks.py
vault/: __init__.py  client.py  config.py
vault/apikeys/: __init__.py  keys.py  models.py
vault/audit/: __init__.py  logger.py  models.py
vault/auth/: __init__.py  models.py  sessions.py  users.py
vault/cli/: main.py
vault/cli/commands/: apikeys.py  init.py  invites.py  migrate.py  orgs.py  roles.py  users.py
vault/decorators/: __init__.py  auth.py  permissions.py
vault/integrations/: __init__.py  fastapi.py
vault/invitations/: __init__.py  invites.py  models.py
vault/migrations/: manager.py
vault/migrations/versions/: 001_initial_schema.sql  002_webhooks_and_api_keys.sql
vault/organizations/: __init__.py  members.py  models.py  orgs.py
vault/rbac/: __init__.py  models.py  permissions.py  roles.py
vault/utils/: supabase.py
vault/webhooks/: __init__.py  hooks.py  models.py
