[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault"
version = "0.1.0"
description = "Multi-tenant RBAC library with Supabase integration - keep YOUR data in YOUR tables"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["auth", "rbac", "multi-tenant", "supabase", "organizations", "permissions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "supabase>=2.0.0",
    "supabase-auth>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",  # For EmailStr validation
    "typer>=0.9.0",
    "rich>=13.0.0",  # For nice CLI output
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[project.scripts]
vault = "vault.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/vault"
Documentation = "https://github.com/yourusername/vault#readme"
Repository = "https://github.com/yourusername/vault"
Issues = "https://github.com/yourusername/vault/issues"

[tool.hatch.build.targets.wheel]
packages = ["vault"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=vault",
    "--cov-report=term-missing",
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "supabase.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "supabase_auth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "postgrest.*"
ignore_missing_imports = true
